@@ -1,11 +1,17 @@
+2014-02-02
+    - Use Digest::SHA instead of Digest::SHA1
+        - Digest::SHA is core and preferred by Debian.
+        - https://rt.cpan.org/Ticket/Display.html?id=92658
+    - Bugfix/maintenance release (2.09)
+
 2014-01-26
     - Convert from use "warnings::register;" to "use warnings;".
-    - Bugfix/maintenace release (2.08)
+    - Bugfix/maintenance release (2.08)
 
 2014-01-26
     - Add perl to the prereq in META.yml/META.json
         - Kwalitee / CPANTS
-    - Bugfix/maintenace release (2.07)
+    - Bugfix/maintenance release (2.07)
 
 2013-09-13
     - Increase the delay of the cache invalidation in the tests by default to
